# fastflow

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  generate_crds.py  pyproject.toml  setup.py  test-requirements.txt
.github/workflows/: ci.yml  publish.yml
chart/: Chart.yaml  values.yaml
chart/crds/: kopfpeering-crd.yaml
chart/templates/: _helpers.tpl  app-config.yaml  deployment.yaml  kopf-peering.yaml
chart/templates/rbac/: clusterrole.yaml  clusterrolebinding.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
examples/01-helloworld/: workflow.yaml
examples/02-digraph/: workflow.yaml
examples/03-farmlife/: workflow.yaml
examples/03-farmlife/tasks-impl/: farmlife.py
examples/04-http/: workflow.yaml
src/fastflow/: __init__.py  __main__.py  cli.py  crds.py  engine.py  helpers.py  kubernetes.py  models.py  setup.py
src/fastflow/engine/: lifecycle.py  models.py  task_handlers.py  utils.py  workflow_handlers.py
src/fastflow/tasks/: http.py  stdlib.py
test/: kopf-test-peering.yaml  test_advanced_template.py  test_customtasks.py  test_digraph.py  test_failed_workflow.py  test_max_workflows_executing.py  test_missing_task_dep.py  test_multiworkflow.py  testutil.py
test/customtasks/: testtasks.py
tools/: install-run-minikube.sh
