[build-system]
requires = [
    "setuptools",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "python-fastflow"
authors = [
    { name = "Steffen Vinther Sørensen", email = "svinther@gmail.com" },
]
description = "A workflow engine based on Kopf"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development :: Libraries',
]

dependencies = [
    'kopf==1.37.2',
    'python-dotenv==1.0.1',
    'kubernetes_asyncio==30.3.1',
    # This is for kopf https://kopf.readthedocs.io/en/stable/authentication/
    'kubernetes==30.1.0',
    'Jinja2==3.1.4',
    'networkx==3.4.2',
    'pydantic[email]==2.9.1',
    'pydantic-settings==2.6.0',
    'PyYAML==6.0.1',
    'click==8.1.7'
]


dynamic = [
    "version"
]

[project.urls]
"Homepage" = "https://github.com/svinther/fastflow"

[project.scripts]
fastflow = "fastflow.cli:run"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"

[tool.pytest.ini_options]
testpaths = [
    "test",
]
pythonpath = 'test'

# see https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml
[tool.mypy]
warn_unused_configs = true
warn_return_any = true
python_version = "3.11"
plugins = [
    "pydantic.mypy"
]


[[tool.mypy.overrides]]
module = [
    'networkx',
    'kubernetes_asyncio.client',
    'kubernetes_asyncio.config'
]
ignore_missing_imports = true

[tool.black]
line-length = 79
target-version = ['py39', 'py310']

[tool.isort]
profile = "black"
line_length = 79
